--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
       <li>Otoño 21 septiembre</li>
       <li>Invierno 21 diciembre</li>
     </ol>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus
+      temporibus, iste necessitatibus incidunt ducimus esse maiores ad tempore
+      quam quisquam omnis id dignissimos magnam blanditiis, dicta officiis
+      voluptatem neque eaque.
+    </p>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae harum
+      doloremque repellendus laborum, possimus adipisci officiis assumenda
+      repellat dicta necessitatibus earum consectetur porro enim molestias ipsa
+      itaque? Labore, asperiores ullam!
+    </p>
     <script src="index.js"></script>
   </body>
 </html>
