Agregando imagen de flujo GIt y poniendo chulo el index.html

--- a/index.html
+++ b/index.html
@@ -9,35 +9,13 @@
   </head>
   <body>
     <h1>Aprendiendo Git</h1>
+    <p>Mis primeros pasos en el versionado de código con git y github</p>
     <p>
-      Mis primeros pasos en el versionado de código y aprendiendo a resolver
-      conflictos entre ramas
+      Quieres dominar el uso de git, mira este
+      <a href="https://jonmircha.com/git" target="_blank">enlace</a>
     </p>
-    <ul>
-      <li>Elemento 1</li>
-      <li>Elemento 2</li>
-      <li>Elemento 3</li>
-      <li>Elemento 4</li>
-      <li>Elemento 5</li>
-    </ul>
-    <ol>
-      <li>Primavera 21 marzo</li>
-      <li>Verano 21 junio</li>
-      <li>Otoño 21 septiembre</li>
-      <li>Invierno 21 diciembre</li>
-    </ol>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus
-      temporibus, iste necessitatibus incidunt ducimus esse maiores ad tempore
-      quam quisquam omnis id dignissimos magnam blanditiis, dicta officiis
-      voluptatem neque eaque.
-    </p>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae harum
-      doloremque repellendus laborum, possimus adipisci officiis assumenda
-      repellat dicta necessitatibus earum consectetur porro enim molestias ipsa
-      itaque? Labore, asperiores ullam!
-    </p>
+    <img src="git-flow.png" alt="Flujo básico de Git" />
+
     <script src="index.js"></script>
   </body>
 </html>
